plugins {
    id 'java-library'
    id 'org.sonarqube' version '7.2.3.7755'
    id 'jacoco'
    id 'maven-publish'
    id 'signing'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.bouncycastle:bcprov-jdk18on:1.83'
    testImplementation platform('org.junit:junit-bom:5.14.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.23.0'
}

group = 'com.mirkocaserta.bruce'
version = '2.0.0-SNAPSHOT'
description = 'An ergonomic wrapper around the JCA api'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withSourcesJar()
    withJavadocJar()
}

test {
    useJUnitPlatform()
}

tasks.named('compileJava') {
    options.encoding = 'UTF-8'
    options.javaModuleVersion = provider { project.version }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom {
                name = 'Bruce'
                description = project.description
                url = 'https://github.com/mcaserta/bruce'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = 'mcaserta'
                        name = 'Mirko Caserta'
                        email = 'mirko.caserta@gmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/mcaserta/bruce.git'
                    developerConnection = 'scm:git:ssh://github.com/mcaserta/bruce.git'
                    url = 'https://github.com/mcaserta/bruce'
                }
            }
        }
    }
    repositories {
        maven {
            name = 'mavenCentral'
            def isSnapshot = version.toString().endsWith('-SNAPSHOT')
            url = isSnapshot
                    ? 'https://central.sonatype.com/repository/maven-snapshots/'
                    : 'https://central.sonatype.com/api/v1/publisher/deployment/upload'
            credentials {
                username = findProperty('mavenCentralUsername') ?: System.getenv('MAVEN_CENTRAL_USERNAME')
                password = findProperty('mavenCentralPassword') ?: System.getenv('MAVEN_CENTRAL_PASSWORD')
            }
        }
    }
}

signing {
    def signingKey     = findProperty('signingKey')     ?: System.getenv('GPG_SIGNING_KEY')
    def signingKeyId   = findProperty('signingKeyId')   ?: System.getenv('GPG_SIGNING_KEY_ID')
    def signingPassword = findProperty('signingPassword') ?: System.getenv('GPG_SIGNING_PASSWORD')
    if (signingKey) {
        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
    }
    sign publishing.publications.mavenJava
}

sonarqube {
    properties {
        property "sonar.projectKey", "mcaserta_bruce"
        property "sonar.organization", "mcaserta"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}
